...
                "Sign In",
                textAlign: TextAlign.center,
                style: Theme.of(context).textTheme.bodyLarge,
              ),
              SizedBox(height: context.setHeight(20)),
              CustomTextField(
                key: const Key('email_textField'),
                controller: emailTextEditingController,
                keyboardType: TextInputType.emailAddress,
                labelText: "Email",
                onChanged: (_) => validateTextFields(),
              ),
              SizedBox(height: context.setHeight(20)),
              CustomTextField(
                key: const Key('password_textField'),
                controller: passwordTextEditingController,
                labelText: "Password",
                obscureText: true,
                onChanged: (_) => validateTextFields(),
              ),
              SizedBox(height: context.setHeight(21)),
...
